// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`groupField > should render correctly checked 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_xf61n40 uv_xf61n42d uv_xf61n43p"
      >
        <fieldset
          class="uv_h1hrwa0"
        >
          <div
            class="uv_xf61n40 uv_xf61n42d uv_xf61n45p"
          >
            <div
              class="uv_xf61n40 uv_xf61n42d uv_xf61n45j"
            >
              <legend
                class="uv_l58dz70 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsn uv_1do42ls1a uv_1do42ls32"
              >
                Label
              </legend>
            </div>
            <div
              class="uv_xf61n40 uv_xf61n42d uv_xf61n43v"
            >
              <label
                aria-disabled="false"
                class="uv_1hngnvm9 uv_1hngnvma uv_1hngnvmd"
                for="_r_3_"
              >
                <div
                  class="uv_xf61n40 uv_xf61n41j uv_xf61n42d uv_xf61n45d"
                >
                  <div
                    class="uv_1w3vbem0 uv_1w3vbemd uv_1w3vbem2j"
                    style="--uv_85qyp70: auto 1fr; --uv_85qyp71: auto 1fr; --uv_85qyp72: auto 1fr; --uv_85qyp73: auto 1fr; --uv_85qyp74: auto 1fr; --uv_85qyp75: auto 1fr;"
                  >
                    <span
                      class="uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsj uv_1do42ls1a uv_1do42ls32"
                      for="_r_3_"
                    >
                      value 1
                    </span>
                  </div>
                </div>
                <div
                  class="uv_1hngnvm0 uv_1hngnvm1 uv_1hngnvm3 uv_1hngnvm5"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    class="uv_1hngnvm8"
                    id="_r_3_"
                    name="Group.value-1"
                    type="checkbox"
                    value="value-1"
                  />
                </div>
              </label>
              <label
                aria-disabled="false"
                class="uv_1hngnvm9 uv_1hngnvma uv_1hngnvmd"
                for="_r_9_"
              >
                <div
                  class="uv_xf61n40 uv_xf61n41j uv_xf61n42d uv_xf61n45d"
                >
                  <div
                    class="uv_1w3vbem0 uv_1w3vbemd uv_1w3vbem2j"
                    style="--uv_85qyp70: auto 1fr; --uv_85qyp71: auto 1fr; --uv_85qyp72: auto 1fr; --uv_85qyp73: auto 1fr; --uv_85qyp74: auto 1fr; --uv_85qyp75: auto 1fr;"
                  >
                    <span
                      class="uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsj uv_1do42ls1a uv_1do42ls32"
                      for="_r_9_"
                    >
                      value 1
                    </span>
                  </div>
                </div>
                <div
                  class="uv_1hngnvm0 uv_1hngnvm1 uv_1hngnvm3 uv_1hngnvm5"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    class="uv_1hngnvm8"
                    id="_r_9_"
                    name="Group.value-2"
                    type="checkbox"
                    value="value-2"
                  />
                </div>
              </label>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`groupField > should trigger events correctly with required prop 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_xf61n40 uv_xf61n42d uv_xf61n43p"
      >
        <fieldset
          aria-describedby="_r_f_"
          class="uv_h1hrwa0"
        >
          <div
            class="uv_xf61n40 uv_xf61n42d uv_xf61n45p"
          >
            <div
              class="uv_xf61n40 uv_xf61n42d uv_xf61n45j"
            >
              <div
                class="uv_xf61n40 uv_xf61n4v uv_xf61n42j uv_xf61n45j"
              >
                <legend
                  class="uv_l58dz70 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsn uv_1do42ls1a uv_1do42ls32"
                >
                  ToggleGroupField events
                </legend>
                <span
                  class="uv_1do42ls0 uv_1do42ls4 uv_1do42ls9 uv_1do42lsn uv_1do42ls1a uv_1do42ls2m"
                >
                  *
                </span>
              </div>
            </div>
            <div
              class="uv_xf61n40 uv_xf61n42d uv_xf61n43v"
            >
              <label
                aria-disabled="false"
                class="uv_1hngnvm9 uv_1hngnvma uv_1hngnvmd"
                for="_r_k_"
              >
                <div
                  class="uv_xf61n40 uv_xf61n41j uv_xf61n42d uv_xf61n45d"
                >
                  <div
                    class="uv_1w3vbem0 uv_1w3vbemd uv_1w3vbem2j"
                    style="--uv_85qyp70: auto 1fr; --uv_85qyp71: auto 1fr; --uv_85qyp72: auto 1fr; --uv_85qyp73: auto 1fr; --uv_85qyp74: auto 1fr; --uv_85qyp75: auto 1fr;"
                  >
                    <span
                      class="uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsj uv_1do42ls1a uv_1do42ls32"
                      for="_r_k_"
                    >
                      value 1
                    </span>
                  </div>
                </div>
                <div
                  class="uv_1hngnvm0 uv_1hngnvm1 uv_1hngnvm4 uv_1hngnvm5"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="true"
                    class="uv_1hngnvm8"
                    id="_r_k_"
                    name="test.value-1"
                    type="checkbox"
                    value="value-1"
                  />
                </div>
              </label>
              <label
                aria-disabled="false"
                class="uv_1hngnvm9 uv_1hngnvma uv_1hngnvmd"
                for="_r_q_"
              >
                <div
                  class="uv_xf61n40 uv_xf61n41j uv_xf61n42d uv_xf61n45d"
                >
                  <div
                    class="uv_1w3vbem0 uv_1w3vbemd uv_1w3vbem2j"
                    style="--uv_85qyp70: auto 1fr; --uv_85qyp71: auto 1fr; --uv_85qyp72: auto 1fr; --uv_85qyp73: auto 1fr; --uv_85qyp74: auto 1fr; --uv_85qyp75: auto 1fr;"
                  >
                    <span
                      class="uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsj uv_1do42ls1a uv_1do42ls32"
                      for="_r_q_"
                    >
                      value 1
                    </span>
                  </div>
                </div>
                <div
                  class="uv_1hngnvm0 uv_1hngnvm1 uv_1hngnvm4 uv_1hngnvm5"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="true"
                    class="uv_1hngnvm8"
                    id="_r_q_"
                    name="test.value-2"
                    type="checkbox"
                    value="value-2"
                  />
                </div>
              </label>
            </div>
          </div>
        </fieldset>
        <span
          class="uv_1do42ls0 uv_1do42ls4 uv_1do42ls9 uv_1do42lsp uv_1do42ls1a uv_1do42ls2m"
          id="_r_f_"
          role="status"
        >
          This field is required
        </span>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
